# hh-creator

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  setup.py
.github/actions/pyinstaller/: Dockerfile  action.yaml  entrypoint.sh
.github/workflows/: build-win.yaml  build.yaml  main.yaml
hh_creator/: __init__.py  __main__.py  animations.py  card.py  config.py  dialog.py  hh.py  main_window.py  player.py  poker_enum.py  scene.py  text.py  util.py
hh_creator/resource/: default.ini
hh_creator/resource/ui/: ActionWidget.ui  BBDialog.ui  MainWindow.ui  NameDialog.ui  NewHandDialog.ui  StackDialog.ui  WelcomeDialog.ui
pyinstaller/: hh-creator.spec  hook-poker.py
pyinstaller-win/: hh-creator.py  hh-creator.spec  hook-poker.py  requirements.txt
test/: hu1.hh  hu2.hh  test_hh.py  test_util.py
